<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.petcareapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil_adm"
        android:name="com.example.petcareapp.ui.perfilAdm.PerfilAdmFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil_adm" />

    <fragment
        android:id="@+id/nav_cadastrar_adm"
        android:name="com.example.petcareapp.ui.cadastrarAdm.CadastrarAdmFragment"
        android:label="@string/menu_cadastrar_adm"
        tools:layout="@layout/fragment_cadastrar_adm" />

    <fragment
        android:id="@+id/nav_doenca"
        android:name="com.example.petcareapp.ui.doenca.DoencasFragment"
        android:label="@string/menu_doenca"
        tools:layout="@layout/fragment_doenca" />

    <fragment
        android:id="@+id/nav_campanha"
        android:name="com.example.petcareapp.ui.campanha.CampanhaFragment"
        android:label="@string/menu_campanha"
        tools:layout="@layout/fragment_campanha" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.petcareapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.petcareapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>