<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_perfil_adm"
            android:icon="@drawable/menu_perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_cadastrar_adm"
            android:icon="@drawable/menu_add"
            android:title="@string/menu_cadastrar_adm" />
        <item
            android:id="@+id/nav_doenca"
            android:icon="@drawable/menu_doenca"
            android:title="@string/menu_doenca" />
        <item
            android:id="@+id/nav_campanha"
            android:icon="@drawable/menu_campanha"
            android:title="@string/menu_campanha" />
    </group>
</menu>