<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DFE9F5"
        tools:context=".LoginActivity$LoginActivity">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/pet_care"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:importantForAutofill="yes"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView4">

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/loginSenha"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:autofillHints="password"
                android:hint="@string/senha"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btLoginEntrar"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#1f1f1e"
                android:contentDescription="@string/descricao_botao_entrar"
                android:text="@string/entrar"
                android:textColor="#FFFFFF"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/telaLoginCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nao_possui_conta_cadastre_se"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telaLoginCadastrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
